[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/tree_sets/C/large_stumpC.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/TreeStumpObject.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.3008, 29.2031 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MovementCollisionBox2/movementCollisionBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StumpHurtBox/stumpHurtBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TreeSprites/TreeStump:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TreeSprites/TreeStump:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TreeSprites/TreeStump:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 106 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "stump_destroyed"
tracks/0/type = "value"
tracks/0/path = NodePath("TreeSprites/TreeStump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MovementCollisionBox2/movementCollisionBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StumpHurtBox/stumpHurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TreeSprites/TreeStump:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "stump_hit_right"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("TreeSprites/TreeStump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.25, 0.4, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 106 ), Vector2( -7, 106 ), Vector2( -2, 106 ), Vector2( -8, 106 ), Vector2( -3, 106 ), Vector2( -4, 106 ) ]
}

[node name="TreeStumpObject" type="Node2D"]
script = ExtResource( 2 )

[node name="TreeSprites" type="Node2D" parent="."]
position = Vector2( 0, -20 )

[node name="TreeStump" type="Sprite" parent="TreeSprites"]
position = Vector2( -4, 106 )
texture = ExtResource( 1 )
offset = Vector2( 0, -120 )

[node name="MovementCollisionBox2" type="StaticBody2D" parent="."]
position = Vector2( 0, -34 )

[node name="movementCollisionBox" type="CollisionShape2D" parent="MovementCollisionBox2"]
position = Vector2( -3.2, 32.8 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="StumpHurtBox" type="Area2D" parent="."]
position = Vector2( 0, -34 )
collision_layer = 8
collision_mask = 8

[node name="stumpHurtBox" type="CollisionShape2D" parent="StumpHurtBox"]
position = Vector2( -3, 33 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="StumpAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/stump_destroyed = SubResource( 3 )
anims/stump_hit_right = SubResource( 4 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]
volume_db = -12.0

[connection signal="area_entered" from="StumpHurtBox" to="." method="_on_StumpHurtBox_area_entered"]
